        Fixed as in R Core fix.
  \item C
  \item From R-2.15.3:  On Windows, work around an event-timing problem when
      the RGui console was closed from the \sQuote{X} control and the closure
      cancelled. (This would on some 64-bit systems crash \R, typically
      those with a slow GPU relative to the CPU.)
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item The new parser fixes bugs arising from the old parser's kludge
        to handle semicolons, illustrated by the incorrect output seen below:
\preformatted{  > p<-parse()
  ?"abc;xyz"
  Error in parse() : <stdin>:1:1: unexpected INCOMPLETE_STRING
  1: "abc;
      ^
  > p<-parse()
  ?8 #abc;xyz
  Error in parse() : <stdin>:1:7: unexpected end of input
  1: 8 #abc;
          ^
}
  \item Fixed deparsing of complex numbers, which were always deparsed
        as the sum of a real and an imaginary part, even though the
        parser can only produce complex numbers that are pure imaginary.
        For example, the following output was produced before:
\preformatted{  > deparse(quote(3*5i))
  [1] "3 * (0+5i)"
}
        This is now deparsed to \code{"3 * 5i"}.  This bug exists
        in all R Core versions through at least R-3.2.2.
  \item Fixed a number of bugs in the deparser that are illustrated
        by the following, which produce incorrect output as noted, in
        R Core versions through at least R-3.2.2:
\preformatted{  deparse(parse(text="`+`(a,b)[1]")[[1]]) # Omits necessary parens
  deparse(quote(`[<-`(x,1)),control="S_compatible")  # unmatched " and '
  deparse(parse(text="a = b <- c")[[1]])  # Puts in unnecessary parens
  deparse(parse(text="a+!b")[[1]])        # Puts in unnecessary parens
  deparse(parse(text="?lm")[[1]])         # Doesn't know about ? operator
  deparse(parse(text="a:=b")[[1]])        # Doesn't know about := operator
  deparse(parse(text="a$'x'")[[1]])       # Conflates name and character
  deparse(parse(text="`*`(2)")[[1]])      # Result is syntactically invalid